syntax = "proto3";
package pt.ulisboa.tecnico.tuplespaces.replicaXuLiskov.contract;

message PutRequest {
  string newTuple = 1;
}
message PutResponse {
}

message ReadRequest {
  string searchPattern = 1;
}
message ReadResponse {
  string result = 1;
}

// take etapa B.2

message GetTupleSpacesStateRequest {}
message GetTupleSpacesStateResponse {
  repeated string tuple = 1;
}

service TupleSpacesReplica {
  rpc put(PutRequest) returns (PutResponse);
  rpc read(ReadRequest) returns (ReadResponse);
  // take etapa B.2
  rpc getTupleSpacesState(GetTupleSpacesStateRequest) returns (GetTupleSpacesStateResponse);
}